[gd_scene load_steps=2 format=3 uid="uid://cxj5k0h2r8a8c"]

[ext_resource type="Script" path="res://scripts/WangLiNeutralizationMiniGame.gd" id="1_1a2b3"]

[node name="WangLiNeutralizationMiniGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1a2b3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.8, 0.3, 1)

[node name="GameArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="PlayerCharacter" type="Control" parent="GameArea"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="WangLi" type="Control" parent="GameArea"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="WeakTeammates" type="Control" parent="GameArea"]
layout_mode = 0

[node name="Ball" type="Control" parent="GameArea"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HUD" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TimerLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "‚è∞ 30s"
horizontal_alignment = 2

[node name="LevelLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 200.0
theme_override_font_sizes/font_size = 20
text = "NIVEL 1/3"

[node name="WangLiLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
anchors_preset = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 18
text = "üêâ Wang Li: ACTIVO"

[node name="SuccessLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
anchors_preset = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 16
text = "Neutralizaciones: 0/5"

[node name="InstructionLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = -200.0
theme_override_font_sizes/font_size = 18
text = "¬°Intercepta los pases hacia Wang Li!"
horizontal_alignment = 1

[node name="InstructionPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="InstructionText" type="Label" parent="UI/InstructionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -80.0
theme_override_font_sizes/font_size = 16
text = "MINIJUEGO: NEUTRALIZAR A WANG LI"
autowrap_mode = 2
vertical_alignment = 1

[node name="StartButton" type="Button" parent="UI/InstructionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 120.0
offset_right = 100.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 20
text = "INICIAR"

[node name="ResultPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
visible = false

[node name="ResultText" type="Label" parent="UI/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -100.0
offset_right = 280.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 18
text = "¬°NIVEL COMPLETADO!"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="UI/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 20.0
offset_right = -80.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 16
text = "REINTENTAR"

[node name="ContinueButton" type="Button" parent="UI/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 16
text = "CONTINUAR"

[node name="NextLevelButton" type="Button" parent="UI/ResultPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 16
text = "SIGUIENTE"
